syntax = "proto3";

package fixbug;

option cc_generic_services = true;

message ResultCode
{
    int32 errcode = 1; 
    bytes errmsg = 2;
}

// 远程请求无非是你想调用哪个函数，函数名字，调用这个函数的参数是什么，调用玩之后返回什么类型
// 函数的参数类型
message LoginRequest
{
    bytes name = 1;
    bytes pwd = 2;
}

// 函数的返回值类型
message LoginResponse
{
    ResultCode result = 1;
    bool sucess = 2;
}

message RegisterRequest
{
    uint32 id = 1;
    bytes name = 2;
    bytes pwd = 3;
}

message RegisterResponse
{
    ResultCode result = 1;
    bool sucess = 2;
}

service UserServiceRpc
{
    // rpc函数的描述
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}
